crates/ox_content_renderer/tests/snapshots/renderer/table_body_width_matches_header.snap
---
source: crates/ox_content_renderer/tests/support/snapshot.rs
description: "| abc | def |\n| --- | --- |\n| bar |\n| bar | baz | boo |\n"
---
<table>
<thead>
<tr>
<th>abc</th>
<th>def</th>
</tr>
</thead>
<tbody>
<tr>
<td>bar</td>
<td></td>
</tr>
<tr>
<td>bar</td>
<td>baz</td>
</tr>
</tbody>
</table>
