crates/ox_content_renderer/tests/snapshots/renderer/task_list_gfm.snap
---
source: crates/ox_content_renderer/tests/support/snapshot.rs
description: "- [x] done\n- [ ] todo\n"
---
<ul>
<li><input type="checkbox" checked disabled> done</li>
<li><input type="checkbox" disabled> todo</li>
</ul>
