crates/ox_content_renderer/tests/snapshots/renderer/task_list_without_gfm_renders_literal.snap
---
source: crates/ox_content_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "- [x] done\n"
---
<ul>
<li><p>[x] done</p>
</li>
</ul>
