crates/ox_content_renderer/tests/snapshots/renderer/thematic_break_variants.snap
---
source: crates/ox_content_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "---\n\n***\n\n___\n"
---
<hr>
<hr>
<hr>
